chore: updates to website

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         <p class="bio">Welcome to my space. Explore my latest projects, shop my collection, and stay connected.</p>
         
         <div class="links-group">
-            <a href="https://rightrun.xyz" target="_blank" class="link-card">My Portfolio</a>
+            <a href="portfolio.html" class="link-card">My Portfolio</a>
             <a href="https://instagram.com/saudamini_1612" target="_blank" class="link-card">Instagram</a>
             
             <!-- Expandable Booking Card -->
