chore: updates to website

--- a/gallery.html
+++ b/gallery.html
@@ -374,7 +374,7 @@
 
         <div class="gallery-grid">
             <div class="gallery-item featured">
-                <img src="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?w=1200&q=80" alt="Featured artwork">
+                <img src="8.jpg" alt="artwork">
                 <div class="gallery-overlay">
                     <h3>Spectrum of Silence</h3>
                     <p class="medium">Oil on Canvas, 48×72"</p>
@@ -383,7 +383,7 @@
             </div>
 
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1549887534-1541e9326642?w=600&q=80" alt="Portrait study">
+                <img src="11.jpg" alt="Portrait study">
                 <div class="gallery-overlay">
                     <h3>Contemplation</h3>
                     <p class="medium">Charcoal & Pastel</p>
@@ -392,7 +392,7 @@
             </div>
 
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1578301978693-85fa9c0320b9?w=600&q=80" alt="Botanical">
+                <img src="13.jpg" alt="Botanical">
                 <div class="gallery-overlay">
                     <h3>Monsoon Blooms</h3>
                     <p class="medium">Watercolor</p>
@@ -401,7 +401,7 @@
             </div>
 
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1541961017774-22349e4a1262?w=600&q=80" alt="Abstract">
+                <img src="14.jpg" alt="Abstract">
                 <div class="gallery-overlay">
                     <h3>Urban Rhythms</h3>
                     <p class="medium">Mixed Media</p>
