--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: -1;
+            z-index: -2;
             overflow: hidden;
         }
 
@@ -95,6 +95,25 @@
             width: 100%;
             height: auto;
             will-change: transform;
+        }
+
+        /* ========== VIDEO BACKGROUND ========== */
+        .video-bg {
+            position: fixed;
+            top: 10%;
+            left: 80%;
+            transform: translate(-5%, -5%);
+            width: 20%;
+            max-width: 300px;
+            z-index: -1;
+            pointer-events: none;
+        }
+
+        .video-bg video {
+            width: 100%;
+            height: auto;
+            display: block;
+            transform: scaleX(-1);
         }
 
         /* Decorative vine overlay (like in the image) */
@@ -785,13 +804,20 @@
                 width: 100%;
                 height: auto;
                 min-height: 100%;
-                z-index: -1;
+                z-index: -2;
             }
 
             .parallax-bg img {
                 width: 100%;
                 height: auto;
                 display: block;
+            }
+
+            /* Video background on mobile */
+            .video-bg {
+                position: fixed;
+                width: 30%;
+                max-width: 100px;
             }
             
             /* Ensure content is above the absolute background */
@@ -826,6 +852,13 @@
     <!-- Parallax Background Image -->
     <div class="parallax-bg">
         <img src="bg-parallax.png" alt="" id="parallaxImg">
+    </div>
+
+    <!-- Video Background (above parallax, below all content) -->
+    <div class="video-bg">
+        <video autoplay muted loop playsinline id="videoBg">
+            <source src="gk.webm"video/mp4">
+        </video>
     </div>
 
     <!-- Decorative Fireflies -->
@@ -921,7 +954,7 @@
         <div class="section-content">
             <div class="artist-content">
                 <div class="artist-image">
-                    <img src="https://cdn.beacons.ai/user_content/IVTnb25BwdSZ4vSK1vf1vnuBUeJ3/profile_khidki.png" alt="The Artist">
+                    <img src="sjdp.jpg" alt="The Artist">
                 </div>
                 <div class="artist-info">
                     <h3>The Artist</h3>
