--- a/portfolio.html
+++ b/portfolio.html
@@ -898,7 +898,7 @@
         <ul class="nav-links">
             <li><a href="#artworks">Artworks</a></li>
             <li><a href="#artist">Artist</a></li>
-            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -954,7 +954,7 @@
         <div class="section-content">
             <div class="artist-content">
                 <div class="artist-image">
-                    <img src="sjdp.jpg" alt="The Artist">
+                    <img src="https://cdn.beacons.ai/user_content/IVTnb25BwdSZ4vSK1vf1vnuBUeJ3/profile_khidki.png" alt="The Artist">
                 </div>
                 <div class="artist-info">
                     <h3>The Artist</h3>
@@ -1038,7 +1038,7 @@
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg>
                         </a>
-                        <a href="mailto:hello@khidki.art" class="social-link">
+                        <a href="mailto:sjkhidkee@gmail.com" class="social-link">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                                 <polyline points="22,6 12,13 2,6"></polyline>
