Add period to tagline in about.html

--- a/about.html
+++ b/about.html
@@ -410,7 +410,7 @@
             <img src="https://cdn.beacons.ai/user_content/IVTnb25BwdSZ4vSK1vf1vnuBUeJ3/profile_khidki.png" alt="Artist" class="profile-image">
             <div class="intro">
                 <h1>The Artist</h1>
-                <p class="tagline">Painting emotions, one canvas at a time</p>
+                <p class="tagline">Painting emotions, one canvas at a time.</p>
                 <p>I'm a visual artist drawn to the intersection of emotion and color. Through my work, I explore the landscapes of human experience—joy, solitude, wonder, and everything in between. Each piece is a window (khidki) into a world that exists somewhere between reality and imagination.</p>
             </div>
         </header>
