chore: added gallery page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>khidki | Links</title>
-    <link rel="icon" href="https://cdn.beacons.ai/user_content/IVTnb25BwdSZ4vSK1vf1vnuBUeJ3/profile_khidki.png" type="image/png">
+    <link rel="icon" href="dp_final.jpeg" type="image/png">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -384,7 +384,7 @@
 
     <div class="container">
         <div class="profile-wrapper">
-            <img src="https://cdn.beacons.ai/user_content/IVTnb25BwdSZ4vSK1vf1vnuBUeJ3/profile_khidki.png" alt="khidki" class="profile-img">
+            <img src="dp_final.jpeg" alt="khidki" class="profile-img">
         </div>
         
         <h1>@khidki</h1>
