--- a/painting.html
+++ b/painting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painting | Khidki</title>
-    <link rel="icon" href="https://cdn.beacons.ai/user_content/IVTnb25BwdSZ4vSK1vf1vnuBUeJ3/profile_khidki.png" type="image/png">
+    <link rel="icon" href="dp_final.jpeg" type="image/png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -93,6 +93,26 @@
             border-radius: 50%; pointer-events: none; z-index: 9998;
             opacity: 0; transform: translate(-50%, -50%);
             box-shadow: 0 0 6px 2px rgba(255, 240, 100, 0.5);
+        }
+
+        /* Spotlight/Darkness Overlay */
+        .spotlight-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 9990;
+            background: radial-gradient(
+                circle 18px at var(--mouse-x, 50%) var(--mouse-y, 50%),
+                transparent 0%,
+                transparent 40%,
+                rgba(0, 0, 0, 0.3) 60%,
+                rgba(0, 0, 0, 0.7) 80%,
+                rgba(0, 0, 0, 0.85) 100%
+            );
+            transition: opacity 0.3s ease;
         }
 
         .bg-gradient {
@@ -392,7 +412,7 @@
             .container { padding: 80px 20px 60px; }
             .purchase-buttons { flex-direction: column; }
             .purchase-btn { justify-content: center; }
-            .firefly-cursor, .firefly-trail { display: none; }
+            .firefly-cursor, .firefly-trail, .spotlight-overlay { display: none; }
             * { cursor: auto; }
             a, button { cursor: pointer; }
         }
@@ -416,6 +436,9 @@
     <div class="firefly-trail" id="trail3"></div>
     <div class="firefly-trail" id="trail4"></div>
     <div class="firefly-trail" id="trail5"></div>
+
+    <!-- Spotlight Darkness Overlay -->
+    <div class="spotlight-overlay" id="spotlightOverlay"></div>
 
     <div class="bg-gradient"></div>
 
@@ -636,10 +659,17 @@
         // Firefly cursor
         const cursor = document.getElementById('cursor');
         const trails = [document.getElementById('trail1'), document.getElementById('trail2'), document.getElementById('trail3'), document.getElementById('trail4'), document.getElementById('trail5')];
+        const spotlightOverlay = document.getElementById('spotlightOverlay');
         let mouseX = 0, mouseY = 0, cursorX = 0, cursorY = 0, prevCursorX = 0, prevCursorY = 0, currentAngle = 0;
         const trailPositions = trails.map(() => ({ x: 0, y: 0 }));
         
-        document.addEventListener('mousemove', (e) => { mouseX = e.clientX; mouseY = e.clientY; });
+        document.addEventListener('mousemove', (e) => { 
+            mouseX = e.clientX; 
+            mouseY = e.clientY;
+            // Update spotlight position
+            spotlightOverlay.style.setProperty('--mouse-x', e.clientX + 'px');
+            spotlightOverlay.style.setProperty('--mouse-y', e.clientY + 'px');
+        });
 
         function animate() {
             prevCursorX = cursorX; prevCursorY = cursorY;
