--- a/gallery.html
+++ b/gallery.html
@@ -325,7 +325,7 @@
     <div class="bg-gradient"></div>
 
     <nav class="nav">
-        <a href="portfolio.html" class="back-link">
+        <a href="index.html" class="back-link">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="19" y1="12" x2="5" y2="12"></line>
                 <polyline points="12 19 5 12 12 5"></polyline>
@@ -372,9 +372,9 @@
             </a>
 
             <a href="painting.html?id=3" class="gallery-item">
-                <img src="8.jpg" alt="Garden of Solitude">
+                <img src="8.jpg" alt="Kaarigari">
                 <div class="gallery-overlay">
-                    <h3>Garden of Solitude</h3>
+                    <h3>Kaarigari</h3>
                     <p class="medium">Watercolor on Paper</p>
                     <span class="view-btn">
                         View Details
@@ -387,9 +387,9 @@
             </a>
 
             <a href="painting.html?id=4" class="gallery-item">
-                <img src="9.jpg" alt="Dreams in Color">
+                <img src="9.jpg" alt="Mannat">
                 <div class="gallery-overlay">
-                    <h3>Dreams in Color</h3>
+                    <h3>Mannat</h3>
                     <p class="medium">Acrylic on Canvas</p>
                     <span class="view-btn">
                         View Details
@@ -402,9 +402,9 @@
             </a>
 
             <a href="painting.html?id=5" class="gallery-item">
-                <img src="11.jpg" alt="Silent Whispers">
+                <img src="11.jpg" alt="Kshitij">
                 <div class="gallery-overlay">
-                    <h3>Silent Whispers</h3>
+                    <h3>Kshitij</h3>
                     <p class="medium">Charcoal & Pastel</p>
                     <span class="view-btn">
                         View Details
@@ -417,9 +417,9 @@
             </a>
 
             <a href="painting.html?id=6" class="gallery-item">
-                <img src="12.jpg" alt="Monsoon Blooms">
+                <img src="12.jpg" alt="Parchhai">
                 <div class="gallery-overlay">
-                    <h3>Monsoon Blooms</h3>
+                    <h3>Parchhai</h3>
                     <p class="medium">Watercolor</p>
                     <span class="view-btn">
                         View Details
