--- a/painting.html
+++ b/painting.html
@@ -437,8 +437,6 @@
     <div class="firefly-trail" id="trail4"></div>
     <div class="firefly-trail" id="trail5"></div>
 
-    <!-- Spotlight Darkness Overlay -->
-    <div class="spotlight-overlay" id="spotlightOverlay"></div>
 
     <div class="bg-gradient"></div>
 
@@ -549,36 +547,36 @@
             {
                 id: 3,
                 image: "8.jpg",
-                title: "Garden of Solitude",
+                title: "Kaarigari",
                 medium: "Watercolor on Paper, 18×24\"",
-                description: "A meditation on finding peace in nature's embrace. The garden depicted here is both real and imagined—a sanctuary where thoughts bloom like flowers and worries dissolve into morning dew. The delicate watercolor technique mirrors the fragility and resilience of inner peace.",
+                description: "This work reminds us that meaning doesn’t always live in grand views but in small, often unnoticed moments. By closing our eyes and slowing down, we learn to feel presence, light, and life through details rather than spectacle",
                 audio: null,
                 audioDuration: "Coming soon"
             },
             {
                 id: 4,
                 image: "9.jpg",
-                title: "Dreams in Color",
+                title: "Mannat",
                 medium: "Acrylic on Canvas, 24×36\"",
-                description: "What do dreams look like when they escape the boundaries of sleep? This abstract exploration captures the vivid, sometimes chaotic beauty of our subconscious wanderings. Bold colors collide and merge, creating a visual symphony of imagination unbound.",
+                description: "Under one shared sky, distance loses its power. This painting reflects how love, kindness, and remembrance travel effortlessly across time and space—especially during festivals, celebrations, and moments of quiet longing.",
                 audio: null,
                 audioDuration: "Coming soon"
             },
             {
                 id: 5,
                 image: "11.jpg",
-                title: "Silent Whispers",
+                title: "Kshitij",
                 medium: "Charcoal & Pastel, 16×20\"",
-                description: "A study in contrast and subtlety, this piece uses the rawness of charcoal softened by pastel to convey the gentle power of unspoken words. The figure emerges from shadow, caught in a moment of quiet revelation, inviting viewers to lean in and listen.",
+                description: "This painting explores why we look at horizons—not out of loss, but out of imagination.\n Standing at a chosen peak of our journey, we allow ourselves to feel proud, pause, and envision what else we could become. The horizon becomes a reminder that the story is still unfolding.",
                 audio: null,
                 audioDuration: "Coming soon"
             },
             {
                 id: 6,
                 image: "12.jpg",
-                title: "Monsoon Blooms",
+                title: "Parchhai",
                 medium: "Watercolor, 12×16\"",
-                description: "The first rain of monsoon season brings more than just water—it brings life, hope, and an explosion of color. This botanical study celebrates the flowers that bloom most vibrantly after the storm, a reminder that growth often follows the hardest times.",
+                description: "This painting explores the imbalance of moving on. While one person leaves for new beginnings, the one who stays behind remains surrounded by memories embedded in the same space, struggling longer with absence and emotional weight.",
                 audio: null,
                 audioDuration: "Coming soon"
             },
