--- a/projects.html
+++ b/projects.html
@@ -335,7 +335,7 @@
     <div class="bg-gradient"></div>
 
     <nav class="nav">
-        <a href="portfolio.html" class="back-link">
+        <a href="index.html" class="back-link">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="19" y1="12" x2="5" y2="12"></line>
                 <polyline points="12 19 5 12 12 5"></polyline>
@@ -354,7 +354,7 @@
             <article class="artwork-card">
                 <img src="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?w=600&q=80" alt="Abstract painting" class="artwork-image">
                 <div class="artwork-info">
-                    <h3>Dreams in Color</h3>
+                    <h3>Kshitij</h3>
                     <p class="medium">Acrylic on Canvas, 24×36"</p>
                     <p>An exploration of emotions through vibrant color palettes and fluid brushstrokes.</p>
                     <div class="artwork-tags">
@@ -367,7 +367,7 @@
             <article class="artwork-card">
                 <img src="https://images.unsplash.com/photo-1549887534-1541e9326642?w=600&q=80" alt="Portrait" class="artwork-image">
                 <div class="artwork-info">
-                    <h3>Silent Whispers</h3>
+                    <h3>Kshitij</h3>
                     <p class="medium">Oil on Canvas, 18×24"</p>
                     <p>A portrait study capturing the unspoken stories behind the eyes.</p>
                     <div class="artwork-tags">
@@ -380,7 +380,7 @@
             <article class="artwork-card">
                 <img src="https://images.unsplash.com/photo-1578301978693-85fa9c0320b9?w=600&q=80" alt="Nature art" class="artwork-image">
                 <div class="artwork-info">
-                    <h3>Garden of Solitude</h3>
+                    <h3>Kaarigari</h3>
                     <p class="medium">Watercolor on Paper, 12×16"</p>
                     <p>Botanical illustrations inspired by forgotten gardens and quiet afternoons.</p>
                     <div class="artwork-tags">
