--- a/contact.html
+++ b/contact.html
@@ -372,7 +372,7 @@
     <div class="bg-gradient"></div>
 
     <nav class="nav">
-        <a href="portfolio.html" class="back-link">
+        <a href="index.html" class="back-link">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="19" y1="12" x2="5" y2="12"></line>
                 <polyline points="12 19 5 12 12 5"></polyline>
